ingress-with-elb/rule-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: ikhsannugs.xyz
    http:
      paths:
      - backend:
          serviceName: aks-helloworld
          servicePort: 80
        path: /one(/|$)(.*)
      - backend:
          serviceName: ingress-demo
          servicePort: 80
        path: /two(/|$)(.*)
      - backend:
          serviceName: aks-helloworld
          servicePort: 80
        path: /(.*)
